<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/comment_image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_android_black_24dp"
        app:civ_border_color="@color/black"
        app:civ_border_width="0.5dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/comment_image">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp">

            <TextView
                android:id="@+id/comment_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/comment_author"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/comment_author"
                android:text="@string/content"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/comment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/comment"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textColor="@color/grey"
                android:textSize="12sp" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>