<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:textAlignment="center">

    <TextView
        android:id="@+id/text_enter_amount_to_donate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/Amount"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="@+id/text_enter_amount_to_donate"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="@+id/text_enter_amount_to_donate"
        app:layout_constraintTop_toBottomOf="@+id/text_enter_amount_to_donate">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/currency"
            android:padding="10dp"
            android:src="@drawable/ic_action_naira" />

        <EditText
            android:id="@+id/editText_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:background="@drawable/edit_field_curves"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/text_enter_amount_to_donate"
            app:layout_constraintStart_toStartOf="@+id/text_enter_amount_to_donate"
            app:layout_constraintTop_toBottomOf="@+id/text_enter_amount_to_donate" />

    </LinearLayout>

    <Button
        android:id="@+id/button_donate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_triangle_blue"
        android:text="@string/donate_now_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>